Little due dillignece on NPM side

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@sublet/data-layer",
-  "version": "0.0.11",
-  "description": "",
+  "version": "0.0.13",
   "main": "index.js",
-  "author": "",
-  "license": "ISC",
+  "description": "Sample data layer for the Safeplaces backend API.",
+  "repository": "git@github.com:Path-Check/safeplaces-data-layer.git",
+  "author": "Jeffrey Hunter <jeff@jeffreyhunter.me>",
+  "license": "MIT",
   "scripts": {
     "prebuild:prod": "rm -rf dist && mkdir dist",
-    "build:prod": "cp -r src/* dist",
+    "build:prod": "cp -r src/* dist && cp README.md ./dist",
     "postbuild:prod": "cp package.json dist/package.json",
     "migrate:up": "knex migrate:latest",
     "migrate:down": "knex migrate:rollback",
