--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "prebuild:prod": "rm -rf dist && mkdir dist",
     "build:prod": "cp -r src/* dist && cp -r bin dist && cp README.md ./dist",
     "postbuild:prod": "cp package.json dist/package.json",
-    "migrate:up": "knex migrate:latest",
-    "migrate:down": "knex migrate:rollback",
-    "seed": "knex seed:run --env development",
-    "seed:test": "knex seed:run --env test",
+    "migrate:up:private": "knex migrate:latest --knexfile src/config/private.js",
+    "migrate:up:public": "knex migrate:latest --knexfile src/config/public.js",
+    "migrate:down:private": "knex migrate:rollback --knexfile src/config/private.js",
+    "migrate:down:public": "knex migrate:rollback --knexfile src/config/public.js",
+    "seed:dev:private": "knex --knexfile src/config/private.js seed:run --env development",
+    "seed:test:private": "knex --knexfile src/config/private.js seed:run --env test",
+    "seed:dev:public": "knex --knexfile src/config/public.js seed:run --env development",
+    "seed:test:public": "knex --knexfile src/config/public.js seed:run --env test",
     "lint": "eslint ./",
     "lint:fix": "eslint ./ --fix",
     "pretest": "knex migrate:latest && knex seed:run --env test",
