Got migrations and seeds working

--- a/package.json
+++ b/package.json
@@ -14,17 +14,16 @@
     "migrate:up:public": "knex migrate:latest --knexfile src/config/public.js",
     "migrate:down:private": "knex migrate:rollback --knexfile src/config/private.js",
     "migrate:down:public": "knex migrate:rollback --knexfile src/config/public.js",
-    "seed:dev:private": "knex --knexfile src/config/private.js seed:run --env development",
-    "seed:test:private": "knex --knexfile src/config/private.js seed:run --env test",
-    "seed:dev:public": "knex --knexfile src/config/public.js seed:run --env development",
-    "seed:test:public": "knex --knexfile src/config/public.js seed:run --env test",
+    "seed:dev:private": "env NODE_ENV=development knex --knexfile src/config/private.js seed:run",
+    "seed:test:private": "env NODE_ENV=test knex --knexfile src/config/private.js seed:run",
+    "seed:dev:public": "env NODE_ENV=development knex --knexfile src/config/public.js seed:run",
+    "seed:test:public": "env NODE_ENV=test knex --knexfile src/config/public.js seed:run",
     "lint": "eslint ./",
     "lint:fix": "eslint ./ --fix",
-    "pretest": "knex migrate:latest && knex seed:run --env test",
+    "pretest": "npm run migrate:up:private && npm run migrate:up:public && npm run seed:test:private && npm run seed:test:public",
     "test": "nyc --reporter=html --reporter=text mocha test/**/*.* --exit",
-    "posttest": "knex seed:run --env development",
-    "test:unit": "mocha test/unit/*.* --exit",
-    "test:all": "mocha test/**/*.* --exit",
+    "posttest": "npm run seed:dev:private && npm run seed:dev:public",
+    "test:nosetup": "nyc --reporter=html --reporter=text mocha test/**/*.* --exit",
     "format": "prettier --write **/*.{js,json}"
   },
   "bin": {
