--- a/package.json
+++ b/package.json
@@ -55,9 +55,12 @@
     "hygen": "^5.0.3",
     "jshint": "^2.11.0",
     "mocha": "^7.1.1",
+    "moment": "^2.27.0",
     "nyc": "^15.0.1",
     "pre-commit": "^1.2.2",
     "prettier": "^2.0.5",
+    "random-coordinates": "^1.0.1",
+    "sinon": "^9.0.2",
     "uuidv4": "^6.0.9",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
