--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@patchcheck/data-layer",
+  "name": "@sublet/data-layer",
   "version": "0.1.2",
   "main": "index.js",
   "description": "Sample data layer for the Safeplaces backend API.",
