Remove unused dependencies and run code formatter

--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "@pathcheck/data-layer",
   "version": "0.1.5",
-  "main": "index.js",
-  "description": "Sample data layer for the Safeplaces backend API.",
+  "main": "src/index.js",
+  "description": "Sample data layer for the SafePlaces backend API",
   "repository": "git@github.com:Path-Check/safeplaces-data-layer.git",
-  "author": "Jeffrey Hunter <jeff@jeffreyhunter.me>",
   "license": "MIT",
   "scripts": {
-    "prebuild:prod": "rm -rf dist && mkdir dist",
-    "build:prod": "cp -r src/* dist && cp -r bin dist && cp README.md ./dist",
-    "postbuild:prod": "cp package.json dist/package.json",
     "migrate:up": "knex migrate:latest",
     "migrate:down": "knex migrate:rollback",
     "seed": "knex seed:run --env development",
@@ -21,8 +17,11 @@
     "posttest": "knex seed:run --env development",
     "test:unit": "mocha test/unit/*.* --exit",
     "test:all": "mocha test/**/*.* --exit",
-    "format": "prettier --write **/*.{js,json}"
+    "format": "prettier --write \"**/*.{js,json}\""
   },
+  "files": [
+    "src/**/*"
+  ],
   "bin": {
     "spdl": "./bin/cli.js"
   },
@@ -42,11 +41,10 @@
     "knex-postgis": "0.12.0",
     "ngeohash": "^0.6.3",
     "pg": "8.2.1",
+    "uuidv4": "^6.1.1",
     "wkx": "^0.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "eslint": "^7.0.0",
     "hygen": "^5.0.3",
@@ -54,9 +52,6 @@
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.0.5",
-    "uuidv4": "^6.0.9",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "prettier": "^2.0.5"
   }
 }
