Fix linting and modify publish flow

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "migrate:down": "knex migrate:rollback",
     "seed": "knex seed:run --env development",
     "seed:test": "knex seed:run --env test",
-    "lint": "eslint ./",
-    "lint:fix": "eslint ./ --fix",
+    "lint": "eslint \"**/*.js\"",
+    "lint:fix": "eslint --fix \"**/*.js\"",
     "pretest": "knex migrate:latest && knex seed:run --env test",
     "test": "nyc --reporter=html --reporter=text mocha test/**/*.* --exit",
     "posttest": "knex seed:run --env development",
@@ -20,23 +20,24 @@
     "format": "prettier --write \"**/*.{js,json}\""
   },
   "files": [
-    "src/**/*"
+    "src/**/*",
+    "bin/**/*"
   ],
   "bin": {
-    "spdl": "./bin/cli.js"
+    "spdl": "bin/cli.js"
   },
   "engines": {
     "node": ">=12.14.1"
   },
   "pre-commit": [
     "format",
-    "lint",
-    "test"
+    "lint"
   ],
   "dependencies": {
     "bcrypt": "^4.0.1",
     "bluebird": "^3.7.2",
     "chalk": "^4.1.0",
+    "commander": "^5.1.0",
     "knex": "0.21.1",
     "knex-postgis": "0.12.0",
     "ngeohash": "^0.6.3",
@@ -47,8 +48,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^7.0.0",
+    "eslint-plugin-mocha": "^7.0.1",
     "hygen": "^5.0.3",
-    "jshint": "^2.11.0",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
     "pre-commit": "^1.2.2",
